# NLP_FinalProject

./: .gitignore  AGENTS.md  README.md  proposal.md  pyproject.toml
config/: project_config.example.yaml  project_config.yaml
data/: README.md  news_sample.csv  sample_dataset.csv  xsum.csv
notebooks/: README.md
reports/: benchmark.csv  benchmark.json  classification_report.txt  error_analysis.csv  final_report.md  method_summary.csv  metrics.json  presentation.md  qualitative_review.csv  rouge_metrics.json
requirements/: Project Bonus.docx  Project Coverletter.docx  Project FAQs.docx  Project Presentations (Phase 3).docx  Project Proposal (Phase 1).docx  Project Report and Code (Phase 2).docx
scripts/: fetch_datasets.py  render_proposal_pdf.py  run_pipeline.py
src/nlp_project/: __init__.py  app.py  benchmark.py  cli.py  config.py  data.py  evaluate.py  features.py  model.py  preprocess.py  proposal.py  report.py  scraper.py  summarize.py  visualize.py
src/nlp_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_benchmark.py  test_cli.py  test_config.py  test_data.py  test_evaluate.py  test_model.py  test_model_variants.py  test_preprocess.py  test_proposal.py  test_summarize.py  test_visualize.py
tests/fixtures/: tiny_news.csv  tiny_text_classification.csv
